assets/header.css
@-webkit-keyframes mmfadeIn {
  0% {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@keyframes mmfadeIn {
  0% {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

@-webkit-keyframes animation-header-sticky {
  0% {
    transform: translateY(-158px);
    transition: transform .35s ease-in-out;
  }
  to {
    transform: translateY(0);
    transition: transform .35s ease-in-out;
  }
}

@keyframes animation-header-sticky {
  0% {
    transform: translateY(-158px);
    transition: transform .35s ease-in-out;
  }
  to {
    transform: translateY(0);
    transition: transform .35s ease-in-out;
  }
}

.group-lc-wrapper {
  position: relative;
  cursor: pointer;
}

.group-lc-wrapper .lc_icon {
  display: flex;
}

@media (min-width: 992px) {
  .template-index .header-group.header-overlay {
    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    z-index: 9;
  }
  .template-index .header-group.header-overlay .header:not(.header-sticky) .header-container, .template-index .header-group.header-overlay .topbar-container {
    background: transparent;
  }
  .template-index .header-group.header-overlay .header-sticky {
    height: auto !important;
  }
  .template-index .header-group.header-overlay .header-sticky .header-bottom, .template-index .header-group.header-overlay .header-sticky .topbar-container {
    display: none;
  }
}

@media (min-width: 992px) {
  .header-sticky .header-top {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 10;
    -webkit-animation: animation-header-sticky 1s;
    animation: animation-header-sticky 1s;
    box-shadow: 0 0 6px rgba(32, 33, 36, 0.15);
    background-color: var(--header-bg-color);
  }
}

.header-sticky .header-style-10 .header-top {
  position: fixed;
}

@media (max-width: 991px) {
  .header-sticky .header-mobile {
    position: fixed;
    top: 0;
    width: 100%;
    z-index: 10;
    -webkit-animation: animation-header-sticky 1s;
    animation: animation-header-sticky 1s;
    box-shadow: 0 0 6px rgba(32, 33, 36, 0.15);
  }
}

.header-sticky .off-canvas-navigation-wrapper {
  display: none;
}

.header-sticky .header-container:not(.header-style-10) .header-desk .header-top {
  padding: var(--gutter-xxs) 0;
}

.header-sticky .header-style-12 .header-top_wrapper {
  padding-top: 0;
  padding-bottom: 0;
  border-bottom: none;
}

.header-container {
  background-color: var(--header-bg-color);
}

.header-container ul {
  padding: 0;
}

.header-container ul li {
  text-indent: 0;
  margin: 0;
  list-style: none;
}

.header-top {
  padding: 32px 0;
}

.header-top .header-logo {
  width: 24.3%;
  -webkit-padding-end: var(--gutter-xs);
  padding-inline-end: var(--gutter-xs);
}

.header-top .header-logo, .header-top .header-logo > a {
  display: flex;
  align-items: center;
}

.header-top .header-search {
  flex: 1;
  max-width: 50.5%;
  padding: 0 var(--gutter-xs);
  -webkit-margin-end: auto;
  margin-inline-end: auto;
}

.header-top .header-action-list, .header-top .header-contact-box {
  -webkit-padding-start: var(--gutter-xs);
  padding-inline-start: var(--gutter-xs);
}

.header-top .header-contact-box {
  display: none;
  color: var(--text-header-color);
}

@media (min-width: 1200px) {
  .header-top .header-contact-box {
    display: flex;
    align-items: center;
  }
}

.header-top .header-contact-box svg {
  flex: 0 0 48px;
  width: 48px;
  -webkit-margin-end: var(--gutter-xs);
  margin-inline-end: var(--gutter-xs);
}

.header-top .header-contact-box svg path {
  fill: currentColor;
}

[data-arn-action=show] svg {
  color: currentColor;
  fill: currentColor;
}

@media (hover: hover) {
  [data-arn-action=show]:hover svg {
    color: currentColor;
    fill: currentColor;
  }
}

.header-style-2 .header-top {
  padding: 27px 0 23px;
}

.header-style-2 .header-top_wrapper {
  position: relative;
}

.header-style-2 .header-menu {
  flex: 1;
  padding: 0 var(--gutter-xs);
  height: auto;
}

.header-style-2 .header-bottom_wrapper {
  background: var(--main-color);
  border-radius: 10px;
}

.header-style-2 .header-bottom_vertical-menu .vertical-menu-head {
  padding-top: 13px;
  padding-bottom: 13px;
}

.header-style-2 .header-vertical-menu {
  border: 3px solid var(--main-color);
  border-top: none;
}

.header-style-2 .header-bottom-lr {
  -webkit-padding-start: 0;
  padding-inline-start: 0;
}

.header-style-2 .header-bottom_left {
  padding: 4px var(--gutter-xs);
  flex: 1;
  max-width: 65%;
  display: flex;
  align-items: center;
}

.header-style-2 .header-search {
  width: 100%;
}

.header-style-2 .header-search form {
  border: 2px solid var(--header-bg-color);
}

.header-style-2 .header-action-list {
  padding: 0 var(--gutter-xs);
}

.header-style-3.nav-border-true .header-search form {
  border-color: var(--body-bg-color);
}

.header-style-3.nav-border-true .header-bottom {
  border-top: 1px solid var(--nav-bg-nav-link-hover);
}

.header-style-3 .header-bottom {
  background: var(--main-color);
}

.header-style-3 .header-bottom_wrapper {
  position: relative;
}

.header-style-3 .header-menu > .menu-list > li {
  border-inline-end-width: 1px;
  border-inline-end-style: solid;
  border-inline-end-color: var(--nav-bg-nav-link-hover);
}

.header-style-3 .header-menu > .menu-list > li:first-child {
  -webkit-padding-start: 13px;
  padding-inline-start: 13px;
}

.header-style-3 .header-menu > .menu-list > li:last-child {
  -webkit-padding-end: 13px;
  padding-inline-end: 13px;
  border-inline-end-width: 0;
  border-inline-end-style: solid;
  border-inline-end-color: transparent;
}

.header-style-3 .header-menu > .menu-list > li > .menu-item_wrapper > a, .header-style-3 .header-menu > .menu-list > li > a {
  padding-top: var(--gutter-xs);
  padding-bottom: var(--gutter-xs);
}

@media (hover: hover) {
  .header-style-3 .header-menu > .menu-list > li:hover {
    background: var(--nav-bg-nav-link-hover);
  }
}

.header-style-4 .header-top {
  padding-top: 12px;
  padding-bottom: var(--gutter-xxs);
  background: var(--main-color);
}
/* ... */

